# llmpack

./: .clinerules  .gitignore  HOMEBREW.md  Makefile  README.md  README_ja.md  pyproject.toml
.github/workflows/: homebrew-release.yml  release.yml
Formula/: llmpack.rb
spec/: dev_llmpack.spec  llmpack.spec
src/llmpack/: __init__.py  cli.py  llm.py  model_manager.py  settings.py
